--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Cardo:400i|Open+Sans:700|Raleway:400,600,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cardo:400i|Open+Sans:700|Raleway:300,400,600,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>ActivBox</title>
 </head>
 <body>
+
+
 
 <!-- Sprite -->
 <svg style="display: none;">
@@ -36,6 +38,7 @@
 </svg>
 
 
+
 <!-- Header -->
 <header class="header">
     <div class="container">
@@ -56,6 +59,7 @@
 </header>
 
 
+
 <!-- Intro -->
 <div class="intro">
     <div class="container">
@@ -66,6 +70,8 @@
         </div>
     </div>
 </div>
+
+
 
 <!-- Features -->
 <div class="conteiner">
@@ -107,6 +113,7 @@
         </div>
     </div>
 </div>
+
 
 
 <!-- Works -->
@@ -168,6 +175,7 @@
         </div>
     </div>
 </div>
+
 
 
 <!-- Team -->
@@ -291,6 +299,7 @@
 </div>
 
 
+
 <!-- Testimonials -->
 <div class="reviews">
     <div class="container">
@@ -308,6 +317,73 @@
     </div>
 </div>
 
+
+
+<!-- Download -->
+<div class="download">
+    <div class="container">
+        <h3 class="download__title">Are You Ready to Start? Download Now For Free!</h3>
+        <div class="download__text">
+            <p>Fusce dapibus, tellus ac cursus commodo</p>
+        </div>
+        <a class="btn btn--red" btn--long href="#">Download Here</a>
+    </div>
+</div>
+
+
+
+<!-- Footer -->
+<footer class="footer">
+    <div class="container">
+
+        <div class="footer__inner">
+            <div class="footer__block">
+                <h4 class="footer__title">Location</h4>
+                <address class="footer__adress">
+                    <div>3481 Melrose Place</div>
+                    <div>Beverly Hills, CA 90210</div>
+                </address>
+            </div>
+
+            <div class="footer__block">
+             <h4 class="footer__title">Share with Love</h4>
+              <div class="social social--footer">
+                   <a class="social__item" href="#" target="_blank">
+                       <svg class="social__icon">
+                           <use xlink:href="#facebook"></use>
+                       </svg>
+                   </a>
+                    <a class="social__item" href="#" target="_blank">
+                       <svg class="social__icon">
+                           <use xlink:href="#twitter"></use>
+                       </svg>
+                   </a>
+                    <a class="social__item" href="#" target="_blank">
+                       <svg class="social__icon">
+                           <use xlink:href="#linkedin"></use>
+                       </svg>
+                   </a>
+               </div>
+            </div>
+            <div class="footer__block">
+                <h4 class="footer__title">About ActiveBox</h4>
+                <div class="footer__text">
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="copyright">
+        <div class="container">
+            <div class="copyright__text">
+                <div>Copyright © 2020 ActiveBox. All Rights Reserved</div>
+                <div>Made <span>by Kamal Chaneman</span></div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 
 
