--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Cardo:400i|Open+Sans:700|Raleway:300,400,600,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ActivBox</title>
 </head>
 <body>
@@ -54,6 +55,11 @@
                 <a class="nav__link" href="#">Testimonials</a>
                 <a class="nav__link" href="#">Download</a>
             </nav>
+
+            <button class="burger" type="button">
+                <span class="burger__item">Menu</span>
+            </button>
+
         </div>
     </div>
 </header>
@@ -379,7 +385,7 @@
         <div class="container">
             <div class="copyright__text">
                 <div>Copyright © 2020 ActiveBox. All Rights Reserved</div>
-                <div>Made <span>by Kamal Chaneman</span></div>
+                <div>Made <span>by Electivire</span></div>
             </div>
         </div>
     </div>
